# fastapi_crud

./: database.db  database.sqbpro  emails.py  main.py  pyproject.toml
src/: crud.py  models.py  new.py  schemas.py
src/Bill/: crud.py  dependencies.py  main.py  models.py  schemas.py
src/Cart/: crud.py  dependencies.py  main.py  models.py  schemas.py
src/Category/: crud.py  dependencies.py  main.py  models.py  schemas.py
src/Item/: crud.py  dependencies.py  main.py  models.py  schemas.py
src/Order/: crud.py  dependencies.py  main.py  models.py  schemas.py
src/Profile/: crud.py  dependencies.py  main.py  models.py  schemas.py
src/User/: crud.py  dependencies.py  emails.py  main.py  models.py  schemas.py
templates/: email.html  form.html  verification.html
